--- a/TODO
+++ b/TODO
@@ -35,7 +35,7 @@
 *add type checking.
 *add argument type checking.
 *add stack offset calculations with stack pointer.
-*add short, signed, and keywords.
+*add short keyword.
 *add statement expressions.
 *fix up TODOs.
 *get memory management cleared up.
